spring jta with jpa repo